--- a/style/contact.css
+++ b/style/contact.css
@@ -3,6 +3,7 @@
     padding: 0;
     margin: 0;
     color: #fff;
+    text-decoration: none;
 }
 
 body {
@@ -15,6 +16,58 @@ body {
     background-repeat: no-repeat;
     text-transform: capitalize;
 }
+
+.logo{
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    font-size: xx-large;
+    color: aliceblue;
+    padding: 10px 60px;
+    line-height: 80px;
+}
+nav{
+    height: 80px;
+    width: 100%;
+    min-width: 40%;
+    background-color: #253957;
+}
+nav ul{
+    float: right;
+    margin-right: 40px;
+}
+nav li{
+    display: inline-block;
+    margin: 0 8px;
+    padding: .5rem;
+    line-height: 70px;
+}
+nav a{
+    color: aliceblue;
+    font-size: 10px;
+    border: 1px solid transparent;
+    padding: 7px 10px;
+    border-radius: 3px;
+}
+
+a#active,a:hover{
+    border: 1px solid aliceblue;
+    transition: .7s;
+}
+
+
+.fa {
+    font-size: 20px;
+}
+
+nav #icon1{
+    color: aliceblue;
+    font-size: 30px;
+    line-height: 80px;
+    float: right;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+} 
 
 .contact .row {
     display: inline-block;
@@ -78,7 +131,7 @@ form {
 }
 
 h1 {
-    padding: 3%;
+    padding: 1%;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -91,7 +144,7 @@ h1 {
 }
 
 
-.fa {
+.contact .fa {
     margin-right: 10%;
     color: rgba(5, 228, 228, 0.824);
 }
