--- a/style/index.css
+++ b/style/index.css
@@ -43,6 +43,10 @@ a#active,a:hover{
     transition: .7s;
 }
 
+.fa{
+    font-size: 20px;
+}
+
 nav #icon1{
     color: aliceblue;
     font-size: 30px;
