--- a/style/skills.css
+++ b/style/skills.css
@@ -1,6 +1,7 @@
 * {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    /* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
     box-sizing: border-box;
+    text-decoration: none;
     padding: 0;
     margin: 0;
 }
@@ -11,8 +12,62 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
 }
+
+.logo{
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    font-size: xx-large;
+    color: aliceblue;
+    padding: 10px 60px;
+    line-height: 80px;
+}
+nav{
+    height: 80px;
+    width: 100%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    min-width: 40%;
+    background-color: #253957;
+}
+nav ul{
+    float: right;
+    margin-right: 40px;
+}
+nav li{
+    display: inline-block;
+    margin: 0 8px;
+    padding: .5rem;
+    line-height: 70px;
+}
+nav a{
+    color: aliceblue;
+    font-size: 10px;
+    border: 1px solid transparent;
+    padding: 7px 10px;
+    border-radius: 3px;
+}
+
+a#active,a:hover{
+    border: 1px solid aliceblue;
+    transition: .7s;
+}
+
+
+.fa {
+    font-size: 20px;
+}
+
+nav #icon1{
+    color: aliceblue;
+    font-size: 30px;
+    line-height: 80px;
+    float: right;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+} 
+
 #btn {
     margin-top: 2%;
     padding: 10px 20px;
@@ -31,12 +86,13 @@ body {
 .skill-bar {
     border: 1px solid #fff;
     width: 80%;
+    text-transform: uppercase;
     max-width: 500px;
     position: absolute;
     transform: translate(-50%, -50%);
     border-radius: 10px;
     padding: 0% 2% 0% 5%;
-    height: 100%;
+    height: 80%;
     max-height: 500px;
     background-color: rgba(16, 187, 249, 0.639);
     left: 50%;
@@ -173,5 +229,38 @@ h1 {
     .skill-bar{
         position: absolute;
         top: 45%;
+    }
+    nav{
+        position: fixed;
+        z-index: 2;
+
+    }
+    nav #icon1{
+        display: block;
+        position:fixed;
+        right: 0;
+        top: 0px;
+    }
+
+    nav ul{
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        background: #2f3640;
+        top:80px;
+        right: -100%;
+        margin-right: 0;
+        text-align: center;
+        transition: all 1s ease;
+    }
+
+    nav ul.show{
+        right: 0;
+        transition: all 1s ease-in;
+    }
+    nav li{
+        display: block;
+        margin: 20px 0;
+
     }
 }
