--- a/style/contact.css
+++ b/style/contact.css
@@ -221,7 +221,7 @@ h2 {
         width: 100%;
     }
     body{
-        height: 200vh;
+        height: 150vh;
     }
     .contact .row form {
         padding-left: 2%;
@@ -238,5 +238,45 @@ h2 {
     }
     #ln{
         margin-top: 35px;
+    }
+}
+
+@media (max-width:700px) {
+    .skill-bar{
+        position: absolute;
+        top: 45%;
+    }
+    nav{
+        position: fixed;
+        z-index: 2;
+
+    }
+    nav #icon1{
+        display: block;
+        position:fixed;
+        right: 0;
+        top: 0px;
+    }
+
+    nav ul{
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        background: #2f3640;
+        top:80px;
+        right: -100%;
+        margin-right: 0;
+        text-align: center;
+        transition: all 0s ease;
+    }
+
+    nav ul.show{
+        right: 0;
+        transition: all 0s ease-in;
+    }
+    nav li{
+        display: block;
+        margin: 20px 0;
+
     }
 }
