--- a/style/index.css
+++ b/style/index.css
@@ -67,9 +67,10 @@ nav #icon1{
      flex-flow: column;
      padding:3rem 13rem;
      overflow-x: hidden;
-     background-image: linear-gradient(40deg, #0a69f7, #66e6fd, #fff, #66e6fd, #0a69f7);
+     background-image: linear-gradient(40deg, #66e6fd, #fff, #66e6fd);
+     /* background: rgb(218, 214, 214); */
      background-size: 400%;
-     animation: h-animate 3s infinite alternate;
+     animation: h-animate 5s infinite alternate;
  }
 
  #clock {
@@ -192,7 +193,7 @@ nav #icon1{
     .home {
          display: block;
          padding: 3rem 2rem;
-         height: 140vh;
+         height: 110vh;
          background-size: 200%;
      }
 
